--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.13.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/faker": "^6.6.9",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.1",
     "prisma": "^4.13.0",
